--- a/www.abc.net.au/instantsearch.css
+++ b/www.abc.net.au/instantsearch.css
@@ -1,3 +1,19 @@
+.searchContainer {
+    width: 100%;
+    position: fixed;
+    padding: 25px 15px 15px 15px;
+    z-index: 99;
+    background-color: white;
+    border-bottom: 1px solid #d9d9d9;
+}
+
+.searchbox__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+}
+
 .hit-card {
     display: inline-block;
     position: relative;
