--- a/www.abc.net.au/autocomplete.css
+++ b/www.abc.net.au/autocomplete.css
@@ -38,9 +38,14 @@
   .aa-dropdown-menu {
     background-color: #fff;
     border: 1px solid rgba(228, 228, 228, 0.6);
-    min-width: 300px;
+    width: 1200px;
     margin-top: 10px;
     box-sizing: border-box;
+    /* left: -30px; */
+    /* width: 88vw; */
+    border-radius: 3px;
+    box-shadow: 0px 3px 13px 0px rgba(60, 60, 60, 0.4);
+    overflow: hidden;
   }
   .aa-suggestion {
     padding: 6px 12px;
@@ -50,15 +55,34 @@
     border-bottom: 1px solid rgba(228, 228, 228, 0.6);
     border-top: 1px solid rgba(228, 228, 228, 0.6);
     padding: 6px 12px;
+    /* background-color: #141618; */
+    text-align: center;
   }
-  .aa-dropdown-menu {
-    min-width: 600px;
+
+  .aa-suggestions-category img {
+    height: 50px;
   }
+
+  .aa-suggestions-category img#news {
+    background-color: #141618;
+  }
+
   .aa-dropdown-menu > div {
     display: inline-block;
-    width: 50%;
     vertical-align: top;
+    margin: 1px;
+    height: 100%;
   }
   .aa-empty {
     padding: 6px 12px;
+  }
+
+  .left-wrapper {
+    width: 30%
+  }
+
+  .right-wrapper {
+    width: 65%;
+    float: right;
+    padding-right: 20px;
   }
