--- a/www.abc.net.au/autocomplete.css
+++ b/www.abc.net.au/autocomplete.css
@@ -1,6 +1,7 @@
   .aa-suggestion em {
-    font-weight: 1000;
+    /* font-weight: 1000; */
     text-decoration: underline;
+    color: #00C3C1;
   }
 
   .aa-input-container {
@@ -9,7 +10,7 @@
   }
   .aa-input-search {
     margin: 10px;
-    width: 250px;
+    width: 220px;
     line-height: 30px;
     font-size: 18px;
     padding-left: 5px;
@@ -86,3 +87,59 @@
     float: right;
     padding-right: 20px;
   }
+
+  .aa-dataset-iview span {
+    display: flex !important;
+    flex-wrap: wrap;
+}
+
+.aa-dataset-tv span {
+  display: flex !important;
+  flex-wrap: wrap;
+}
+
+.video-wrapper {
+    width: 100%;
+    position: relative;
+    word-wrap: break-word;
+    display: inline-block;
+  }
+
+  .video-wrapper::after {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    content: "\f01d";
+    font-family: FontAwesome;
+    font-size: 50px;
+    color: #fff;
+    opacity: .8;
+    text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
+}
+
+img.video-thumbnail {
+  position: relative;
+  max-width: 200px;
+}
+
+.video-text-wrapper {
+  width: 100%;
+  text-align: center;
+  margin-left: 10x;
+}
+
+a.dropdown:hover {
+  /* padding-bottom: 0 !important; */
+  border-bottom: 0 !important;
+}
+
+.video-title {
+  width: 200px;
+  font-size: 16px;
+}
+
+.video-title em {
+  margin: 0 4px;
+}
