--- a/www.abc.net.au/autocomplete.css
+++ b/www.abc.net.au/autocomplete.css
@@ -163,11 +163,37 @@
     overflow: hidden;
   }
 
+  .aa-dataset-radio .aa-suggestion {
+    border-bottom: 1px solid lightgray;
+    overflow: hidden;
+  }
+
   .aa-title-wrapper {
     margin: 5px;
     height: 35px;
     width: 100%;
     word-wrap: break-word;
     display: inline-block;
+  }
 
+  .aa-radio-wrapper {
+    margin: 5px;
+    height: 35px;
+    width: 100%;
+    word-wrap: break-word;
+    display: flex;
+  }
+
+  #audio-play {
+    height: 50px;
+    width: 50px;
+  }
+
+  #audio-play:after {
+  content: "\f01d";
+  font-family: FontAwesome;
+  font-size: 35px;
+  color: #fff;
+  opacity: .8;
+  text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
   }
