--- a/assets/style/instantsearch.css
+++ b/assets/style/instantsearch.css
@@ -1,3 +1,8 @@
+#main {
+    position: relative;
+    top: 50px;
+}
+
 .searchContainer {
     width: 100%;
     position: fixed;
@@ -7,11 +12,84 @@
     border-bottom: 1px solid #d9d9d9;
 }
 
-.searchbox__info {
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px; }
+    .container::after {
+      content: "";
+      display: table;
+      clear: both; }
+    @media (min-width: 576px) {
+      .container {
+        width: 540px;
+        max-width: 100%; } }
+    @media (min-width: 768px) {
+      .container {
+        width: 720px;
+        max-width: 100%; } }
+    @media (min-width: 992px) {
+      .container {
+        width: 960px;
+        max-width: 100%; } }
+    @media (min-width: 1200px) {
+      .container {
+        width: 1140px;
+        max-width: 100%; } }
+
+
+.ais-search-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.ais-search-box--input {
+    width: 100%;
+    height: 40px;
+    border-radius: 0;
+    padding: 0;
+    color: black;
+    border: solid 1px #CCC;
+    text-indent: 10px;
+    box-shadow: none;
+    outline: none;
+    font-size: 20px;
+    padding-left: 30px;
+}
+#search-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0;
+    padding: 20px 0 10px;
+}
+
+.ais-stats {
+    color: black;
+    font-size: 18px;
+}
+
+.searchbox__info .sortby {
+    font-size: .8em;
+}
+
+.ais-SortBy__root {
+    cursor: pointer;
+    padding: 5px 10px;
+    background: transparent;
+    color: #5fb3f1;
+    border-radius: 0;
+    font-weight: 700;
+    font-size: .9em;
+    border: solid 1px #D9D9D9;
+    -webkit-appearance: none;
+    outline: none;
+}
+
+.bodyContainer {
+    padding-top: 150px;
+    padding-left: 200px;
 }
 
 .hit-card {
@@ -77,4 +155,10 @@
 
 .article-attribution {
     padding-right: 10px;
+}
+
+.facetContainer {
+    font-size: 0.9em;
+    width: 25%;
+    margin-right: 20px;
 }
