--- a/assets/style/instantsearch.css
+++ b/assets/style/instantsearch.css
@@ -274,3 +274,9 @@ em {
     text-decoration: underline !important;
     background-color: #F8F8F8;
 }
+
+li a.active {
+    color: #5fb3f1 !important;
+    border-bottom: 4px solid #5fb3f1;
+    outline: 0;
+}
