--- a/assets/style/autocomplete.css
+++ b/assets/style/autocomplete.css
@@ -61,11 +61,9 @@
   .aa-dropdown-menu {
     background-color: #fff;
     border: 1px solid rgba(228, 228, 228, 0.6);
-    width: 1200px;
+    width: 75vw;
     margin-top: 10px;
     box-sizing: border-box;
-    /* left: -30px; */
-    /* width: 88vw; */
     border-radius: 3px;
     box-shadow: 0px 3px 13px 0px rgba(60, 60, 60, 0.4);
     overflow: hidden;
@@ -112,21 +110,21 @@
   }
 
   .left-wrapper {
-    width: 30%
+    width: 35%;
+    margin-left: 25px !important;
   }
 
   .right-wrapper {
-    width: 65%;
-    float: right;
+    width: 60%;
   }
 
-  .aa-dataset-iview span {
+  .aa-dataset-iview span, .aa-dataset-tv span {
     display: flex !important;
+    justify-content: center
   }
-
 
   .aa-dataset-tv span {
-    display: flex !important;
+    margin-bottom: 10px;
   }
 
   .video-wrapper {
