--- a/assets/style/instantsearch.css
+++ b/assets/style/instantsearch.css
@@ -279,7 +279,8 @@ em {
     background-color: #F8F8F8;
 }
 
-li a.active {
+
+li.active a{
     color: #5fb3f1 !important;
     border-bottom: 4px solid #5fb3f1;
     outline: 0;
