--- a/assets/style/autocomplete.css
+++ b/assets/style/autocomplete.css
@@ -6,6 +6,7 @@
 
   .aa-suggestion a:hover {
     border-bottom: none !important;
+    padding-bottom: 0px !important;
   }
 
   .aa-suggestion:hover,
@@ -13,24 +14,36 @@
     background-color: rgba(241, 241, 241, 0.35);
   }
 
-  /* #autocomplete-container{
-    background-color: #fff;
-    border: 1px solid rgba(228, 228, 228, 0.6);
-    width: 75vw;
-    margin-top: 10px;
-    box-sizing: border-box;
-    border-radius: 3px;
-    box-shadow: 0px 3px 13px 0px rgba(60, 60, 60, 0.4);
-    overflow: hidden;
-  } */
+  .aa-stats {
+    font-size: 14px;
+    margin: 5px;
+    padding-bottom: 10px;
+  }
+
+  .aa-link {
+    margin: 0 0 0 30px !important;
+    padding: 0px !important;
+    color: #5fb3f1 !important;
+    cursor: pointer;
+  }
+
+  .aa-link:hover {
+    border-bottom: none !important;
+    padding-bottom: 0px !important;
+  }
+
+  .see-all {
+    float: right;
+  }
 
   #left-promotional {
     height: 100px;
     display: none; 
   }
 
-  #left-promotional a:hover {
+  #left-promotional a:hover,  #left-promotional a {
     border-bottom: 0 !important;
+    padding-bottom: 0 !important;
   }
 
   .aa-input-container {
@@ -233,3 +246,11 @@
     opacity: .8;
     text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
   }
+
+  .video-header {
+    text-align: left;
+    padding-left: 50px;
+  }
+
+  
+
