--- a/assets/style/instantsearch.css
+++ b/assets/style/instantsearch.css
@@ -242,7 +242,7 @@ select.ais-sort-by-selector {
 }
 
 .article-image-container img {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     object-fit: cover;
     float: left;
@@ -251,6 +251,7 @@ select.ais-sort-by-selector {
 
 .article-text-container {
     padding-top: 5px;
+    overflow: hidden;
 }
 
 .hit-elem-title {
