--- a/assets/style/instantsearch.css
+++ b/assets/style/instantsearch.css
@@ -230,6 +230,7 @@ select.ais-sort-by-selector {
     background-color: white;
     border: none;
     border-top: solid 1px #D3D3D3;
+    overflow: hidden;
 }
 
 .article-image-container {
@@ -248,6 +249,7 @@ select.ais-sort-by-selector {
     float: left;
     background-color: #828282; 
 }
+
 
 .article-text-container {
     padding-top: 5px;
